--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ lang: en
 
 title: Harry's Blog # the main title
 
-tagline: Chaos is merely order waiting to be deciphered. # it will display as the sub-title
+tagline: Veni, vidi, vici # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -81,7 +81,7 @@ theme_mode: [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: ~/Pictures/"Hacker Penguin.png"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
