--- a/_config.yml
+++ b/_config.yml
@@ -71,7 +71,7 @@ google_analytics:
 #     light  - Use the light color scheme
 #     dark   - Use the dark color scheme
 #
-theme_mode: [light|dark]
+theme_mode: # dark
 
 # The CDN endpoint for images.
 # Notice that once it is assigned, the CDN url
@@ -81,7 +81,7 @@ theme_mode: [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar: ~/Pictures/"Hacker Penguin.png"
+avatar: "https://avatars.githubusercontent.com/u/64049111?v=4"
 
 # boolean type, the global switch for TOC in posts.
 toc: true
