--- a/_config.yml
+++ b/_config.yml
@@ -159,7 +159,7 @@ defaults:
       layout: page
       permalink: /:title/
   - scope:
-      path: assets/img/favicons
+      path: /assets/img/favicons
     values:
       swcache: true
   - scope:
