--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ title: Harry's Blog # the main title
 tagline: Veni, vidi, vici # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
-  A minimal, responsive and feature-rich Jekyll theme for technical writing.
+  A blog that captures my ideas, opinions, and rants.
 
 # fill in the protocol & hostname for your site, e.g., 'https://username.github.io'
 url: "https://mvp-harry.github.io/"
