Vlog | Chess Trip (Storming the Capitol)

--- a/_config.yml
+++ b/_config.yml
@@ -97,14 +97,14 @@ comments:
     issue_term: # < url | pathname | title | ...>
   # Giscus options › https://giscus.app
   giscus:
-    repo: # <gh-username>/<repo>
+    repo: MVP-Harry/mvp-harry.github.io # <gh-username>/<repo>
     repo_id:
     category:
     category_id:
     mapping: # optional, default to 'pathname'
     input_position: # optional, default to 'bottom'
     lang: # optional, default to the value of `site.lang`
-    reactions_enabled: # optional, default to the value of `1`
+    reactions_enabled: true # optional, default to the value of `1`
 
 # Self-hosted static assets, optional › https://github.com/cotes2020/chirpy-static-assets
 assets:
