--- a/_config.yml
+++ b/_config.yml
@@ -86,6 +86,9 @@ avatar: "https://avatars.githubusercontent.com/u/64049111?v=4"
 # boolean type, the global switch for TOC in posts.
 toc: true
 
+plugins:
+  - jemoji
+
 comments:
   active: # The global switch for posts comments, e.g., 'disqus'.  Keep it empty means disable
   # The active options are as follows:
