--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ lang: en
 
 title: Harry's Blog # the main title
 
-tagline: Veni, vidi, vici # it will display as the sub-title
+tagline: What's up dawg :DD
 
 description: >- # used by seo meta and the atom feed
   A blog that captures my ideas, opinions, and rants.
