--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ lang: en
 
 title: Harry's Blog # the main title
 
-tagline: What's up dawg :DD
+tagline: Dream, Believe, Do, Repeat
 
 description: >- # used by seo meta and the atom feed
   A blog that captures my ideas, opinions, and rants.
