--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,8 @@ lang: en
 
 title: Harry's Blog # the main title
 
-tagline: Dream, Believe, Do, Repeat
+# tagline: Dream, Believe, Do, Repeat
+tagline: Persistence is Key
 
 description: >- # used by seo meta and the atom feed
   A blog that captures my ideas, opinions, and rants.
